--- a/src/main/resources/com/donoso/easyflight/vista/ManageRespaldo.fxml
+++ b/src/main/resources/com/donoso/easyflight/vista/ManageRespaldo.fxml
@@ -13,28 +13,35 @@
 
     <AnchorPane layoutX="7.0" layoutY="8.0" prefHeight="531.0" prefWidth="872.0" stylesheets="@../estilos/GestionVuelos.css">
         <children>
-            <AnchorPane prefHeight="302.0" prefWidth="871.0" stylesheets="@../estilos/GestionVuelos.css">
-                <styleClass>
-                    <String fx:value="white-bg" />
-                    <String fx:value="shadow" />
-                </styleClass>
+            <AnchorPane layoutX="7.0" layoutY="8.0" prefHeight="531.0" prefWidth="872.0" stylesheets="@../estilos/GestionVuelos.css">
                 <children>
-                    <TableView fx:id="tableViewRespaldo" layoutX="35.0" layoutY="48.0" prefHeight="231.0" prefWidth="432.0">
-                        <columns>
-                            <TableColumn fx:id="column_nombreRespaldo" prefWidth="200.00003051757812" text="Nombre" />
-                            <TableColumn fx:id="column_fechaRespaldo" prefWidth="231.19998168945312" text="Fecha" />
-                        </columns>
-                    </TableView>
-                    <TextField fx:id="txtSearchRespaldo" layoutX="32.0" layoutY="14.0" onKeyReleased="#buscar" prefHeight="26.0" prefWidth="283.0" promptText="Search" styleClass="search" stylesheets="@../estilos/GestionVuelos.css" />
+                    <AnchorPane prefHeight="302.0" prefWidth="871.0" stylesheets="@../estilos/GestionVuelos.css">
+                        <styleClass>
+                            <String fx:value="white-bg" />
+                            <String fx:value="shadow" />
+                        </styleClass>
+                        <children>
+                            <TableView fx:id="tableViewRespaldo" layoutX="35.0" layoutY="48.0" prefHeight="231.0" prefWidth="769.0">
+                                <columns>
+                                    <TableColumn fx:id="columnIdRespaldo" prefWidth="91.19999694824219" text="Id" />
+                                    <TableColumn fx:id="columnNombreRespaldo" prefWidth="268.79998779296875" text="Nombre" />
+                                    <TableColumn fx:id="columnFechaGeneradaRespaldo" prefWidth="157.5999755859375" text="Fecha Generada" />
+                                    <TableColumn fx:id="columnFechaRestauradaRespaldo" prefWidth="144.79998779296875" text="Fecha Restaurada" />
+                                    <TableColumn fx:id="columnGeneradaRespaldo" prefWidth="108.7999267578125" text="Generada" />
+                                </columns>
+                            </TableView>
+                            <TextField fx:id="txtSearchRespaldo" layoutX="32.0" layoutY="14.0" onKeyReleased="#buscar" prefHeight="26.0" prefWidth="283.0" promptText="Search" styleClass="search" stylesheets="@../estilos/GestionVuelos.css" />
+                        </children>
+                    </AnchorPane>
+                    <Button fx:id="buttontEliminarRespaldo" layoutX="259.0" layoutY="322.0" mnemonicParsing="false" onAction="#eliminarRespaldo" prefHeight="26.0" prefWidth="90.0" styleClass="buttonAction" stylesheets="@../estilos/GestionVuelos.css" text="Eliminar" />
+                    <Button fx:id="buttontRestaurarRespaldo" layoutX="364.0" layoutY="322.0" mnemonicParsing="false" onAction="#restaurarRespaldo" prefHeight="26.0" prefWidth="90.0" styleClass="buttonAction" stylesheets="@../estilos/GestionVuelos.css" text="Restaurar" />
                 </children>
+                <styleClass>
+                    <String fx:value="shadow" />
+                    <String fx:value="white-bg" />
+                </styleClass>
             </AnchorPane>
-            <Button fx:id="buttont_eliminarRespaldo" layoutX="259.0" layoutY="322.0" mnemonicParsing="false" onAction="#eliminarRespaldo" prefHeight="26.0" prefWidth="90.0" styleClass="buttonAction" stylesheets="@../estilos/GestionVuelos.css" text="Eliminar" />
-            <Button fx:id="buttont_restaurarRespaldo" layoutX="364.0" layoutY="322.0" mnemonicParsing="false" onAction="#restaurarRespaldo" prefHeight="26.0" prefWidth="90.0" styleClass="buttonAction" stylesheets="@../estilos/GestionVuelos.css" text="Restaurar" />
         </children>
-        <styleClass>
-            <String fx:value="shadow" />
-            <String fx:value="white-bg" />
-        </styleClass>
     </AnchorPane>
 
 </AnchorPane>
